--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,8 @@
     }
    ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "4/52"
    ]
   },
   {
@@ -63,7 +64,8 @@
     }
    ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "4 / (4 * 3)"
    ]
   },
   {
@@ -84,7 +86,42 @@
     "# Explain events as:\n",
     "# A = both children are boys\n",
     "# B = older child is a boy \n",
-    "# C = One of the children is a boy "
+    "# C = One of the children is a boy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25 0.5 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Part 1\n",
+    "# Your solution\n",
+    "A = .5 * .5\n",
+    "B = 1 * .5\n",
+    "prob_B_given_A = 1\n",
+    "print(A, B, prob_B_given_A)\n",
+    "\n",
+    "prob_A_given_B = A * prob_B_given_A / B\n",
+    "prob_A_given_B"
    ]
   },
   {
@@ -95,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.3333333333333333"
       ]
      },
      "execution_count": 5,
@@ -104,8 +141,48 @@
     }
    ],
    "source": [
-    "# Part 1\n",
-    "# Your solution"
+    "# Part 2 \n",
+    "# Your solution\n",
+    "C = .75\n",
+    "\n",
+    "prob_C_given_A = 1\n",
+    "prob_A_given_C = A * prob_C_given_A / C\n",
+    "prob_A_given_C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A = both cards are Aces\n",
+    "# B = one card is Ace of Spades\n",
+    "# C = one card is an Ace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.058823529411764705, 17.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = (4/52) * (3/51)\n",
+    "B = (1/52) + (51/52) * (1/51)\n",
+    "prob_B_given_A = 2/4\n",
+    "prob_A_given_B = A * prob_B_given_A / B\n",
+    "prob_A_given_B, 1/prob_A_given_B"
    ]
   },
   {
@@ -116,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3333333333333333"
+       "(0.0303030303030303, 33.0)"
       ]
      },
      "execution_count": 8,
@@ -125,8 +202,10 @@
     }
    ],
    "source": [
-    "# Part 2 \n",
-    "# Your solution"
+    "C = (4/52) + (48/52) * (4/51)\n",
+    "prob_C_given_A = 1\n",
+    "prob_A_given_C = A * prob_C_given_A / C\n",
+    "prob_A_given_C, 1/prob_A_given_C"
    ]
   },
   {
@@ -156,7 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution\n",
+    "# A = Patient has disease\n",
+    "# B = Patient tests positive for disease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,13 +255,18 @@
        "0.5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your solution"
+    "# prob_A_given_B\n",
+    "A = .01\n",
+    "B = A * .99 + (1-A) * .01\n",
+    "prob_B_given_A = .99\n",
+    "prob_A_given_B = A * prob_B_given_A / B\n",
+    "prob_A_given_B"
    ]
   },
   {
@@ -182,6 +277,111 @@
     "\n",
     "In this lab, we saw a few simple examples of Bayesian logic and how we can add prior information to our calculation, in order to update our beliefs about the certain events. Bayesian logic works in numerous ways and it is not within the scope of this section to give you a deep dive in complex Bayesian problems. You are advised to re-visit the provided links when you have a better understanding of Bayesian inference. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiment\n",
+    "Test Bayes Theorem by generating a card deck and drawing two cards 10,000 times in two different simulations. For the first simulation, if you know that one of the cards is the Ace of Spades, determine the probability that both cards will be aces. If you know at least one of the cards is an ace (without knowing the suit), what is the probability that both cards will be aces?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = ['A', 2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K']\n",
+    "suits = ['S', 'C', 'D', 'H']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0573"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "two_aces = 0\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    deck = []\n",
+    "    for num in nums:\n",
+    "        for suit in suits:\n",
+    "            deck.append(str(num) + suit)\n",
+    "    np.random.shuffle(deck)\n",
+    "    card_1 = deck.pop()\n",
+    "    if card_1 == 'AS':\n",
+    "        card_2 = deck.pop()\n",
+    "    else:\n",
+    "        card_2 = 'AS'\n",
+    "    if 'A' in card_1 and 'A' in card_2:\n",
+    "        two_aces += 1\n",
+    "\n",
+    "np.round(two_aces / 10000, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0316"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_aces = []\n",
+    "counter = 0\n",
+    "\n",
+    "while counter < 10000:\n",
+    "    deck = []\n",
+    "    for num in nums:\n",
+    "        for suit in suits:\n",
+    "            deck.append(str(num) + suit)\n",
+    "    np.random.shuffle(deck)\n",
+    "    card_1, card_2 = deck.pop(), deck.pop()\n",
+    "    if 'A' in card_1 or 'A' in card_2:\n",
+    "        counter += 1\n",
+    "    if 'A' in card_1 and 'A' in card_2:\n",
+    "        two_aces.append((card_1, card_2))\n",
+    "np.round(len(two_aces) / counter, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "Though I do not understand why this should make a difference, it is clear that knowing the specific Ace to be drawn dramatically increases the chances that two aces are drawn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -200,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
